- Minor refactors on RemoteLocalMergeActivity - Add OVES Logo to project. - Refactor manifest file icon - Add amplify plugin to project

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 apply plugin: 'kotlin-android'
 apply plugin: "com.apollographql.apollo"
+apply plugin: 'com.amplifyframework.amplifytools'
 
 android {
     compileSdkVersion 30
